improved iceberg data viz and starter tooling
